Roll contribution page into applicant guide

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -182,20 +182,152 @@ you can decide whether the project is right for you by:
 <h2 id='make-contributions'><a href="#make-contributions">Making Contributions</a></h2>
 <p><img src="https://www.outreachy.org/media/images/bot-contribution.original.png" class="img-fluid"></p>
 
+<p><b>What is a Contribution?</b></p>
+
 <p>
-Once you've picked a project that looks interesting to you,
-proceed to the next application process step, which is to start
-your contribution to the project.  You should record your
-in-progress contributions by logging them from the Outreachy
-community landing pages linked from this page.  Only applicants with
-recorded contributions will be eligible to be accepted as
-interns.
+To 'contribute' means 'To give to a common cause, often along with other people'.
+In free software and open source, we talk about 'contributing' to a project or community.
+That means people working together to improve an open source project.
+People who regularly work on open source are often called 'open source contibutors'.
 </p>
 
 <p>
-Make your contributions early! Many applicants under-estimate
-the time it will take to complete a contribution.
-If a mentor with a popular project is working with several
-promising applicants, they may close the project to new applicants.
+Outreachy applicants will become open source contributors during the contribution period!
+When you work on an Outreachy project task, you're making a 'contribution' to that project.
+A contribution can be something small, like a bug fix or a documentation improvement.
 </p>
+
+<p><b>Applicants are required to make a contribution.</b></p>
+
+<p>
+Outreachy applicants are required to make at least one contribution to an Outreachy project.
+Only applicants who make a contribution will be eligible to be selected as an intern.
+Applicants are required to record their contributions in the Outreachy website.
+You can't submit a final application until you record a contribution.
+</p>
+
+<p>
+Start your contributions early!
+Many applicants under-estimate the time it will take to complete a contribution.
+Most applicants take 5 to 10 days to complete their first contribution.
+</p>
+
+<p>
+Some project mentors find that they have many promising applicants.
+They may choose to close their project to new applicants.
+If you wait too long to start, your project may be closed to new applicants.
+</p>
+
+<p>
+Don't try to make a big, last minute contribution.
+Keep in contact with your mentors throughout the whole contribution period.
+Ask questions and send contributions at a steady pace.
+</p>
+
+<p>
+Start with a smaller contribution.
+Then try a more complex contribution.
+The end goal is to show you have the skills to be a successful intern.
+</p>
+
+<p><b>How do I find a contribution to work on?</b></p>
+
+<p>
+Project mentors have a list of tasks for applicants to work on.
+You can find the task list in the project details page, which is linked from the <a href="{% url 'project-selection' %}">project selection page</a>.
+The project description should include a section called 'Project Contribution Information'.
+That should have information about how to find a contribution to work on.
+</p>
+
+<p>
+Some projects, like the Linux Kernel, want people to contribute in a specific way.
+They may have a tutorial for setting up your environment and creating your first contribution.
+The project description or community description should mention a tutorial.
+</p>
+
+<p>
+Some mentors have each applicant work on different tasks.
+Other mentors have each applicant complete the same task.
+</p>
+
+<p>
+Some project issue trackers have a tagging system.
+Mentors may tag tasks that are good for newcomers to the project.
+Some common tag names are "first patch" or "newcomers welcome" or "newcomer friendly".
+</p>
+
+<p>
+When in doubt, ask the project mentor!
+It's good to ask for suggestions when looking for a suitable contribution.
+Make sure to describe what your skills are and what you want to learn more about.
+</p>
+
+<p><b>Recording your contributions</b></p>
+
+<p>
+Applicants are required to record their contributions in the Outreachy website.
+Only applicants who have recorded a contribution will be allowed to submit a final application.
+</p>
+
+<p>
+You can record a contribution as soon as you start working on it.
+You can go back and edit your recorded contribution at any time.
+</p>
+
+<p>
+You can find a link to record a contribution on the project details page.
+Go to the Outreachy project list, and click the link for your project.
+On the page with project details, you should see a link to
+'record your contributions and create a final application'.
+</p>
+
+<p><b>Getting help on a contribution</b></p>
+
+<p>
+Working on contributions can be confusing at times!
+It is expected and perfectly normal to have questions.
+Mentors are here to help.
+</p>
+
+<p>
+If you get stuck for more than a couple hours, ask the project mentors or community for help.
+If you ask for help privately and don't get an answer, try asking on the public community channels as well.
+If you ask for help publicly and don't get an answer, try emailing the mentor.
+</p>
+
+<p>
+Contributions to open source communities are submitted and reviewed in the public.
+That can feel intimidating at first, but remember that mentors are here to help you!
+</p>
+
+<p><b>Contribution review and revisions</b></p>
+
+<p>
+After you submit a contribution, your mentor or another community member will review it.
+They will often have feedback and changes you'll need to make.
+This is not a criticism of your work or skills.
+You should view it as a chance to learn something new and improve your skills.
+</p>
+
+<p>
+Please be sure to follow up on the reviewer's feedback.
+You may need to submit your contribution several times.
+Keep working on it with your mentor until it is ready to be included in the project.
+It's best to allocate time over several weeks for this process.
+Try to start you contributions as soon as possible.
+</p>
+
+<p><b>How Much Should I Contribute?</b></p>
+
+<p>
+Applicants are only required to make one contribution.
+However, we find that the strongest applicants make multiple contributions.
+The strongest applicants are consistent about working on the project.
+They communicate regularly with their mentor to discuss what they're working on.
+</p>
+
+<p>
+Applicants are encouraged, but not required, to contribute after the contribution period ends.
+</p>
+
 {% endblock %}
