Move essay question description and tips into applicant guide

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -17,6 +17,7 @@ Applicant Guide | Outreachy Documentation
 <a href='#eligibility'>Eligibility</a><br>
 <a href='#outreachy-schedule'>Outreachy schedule</a><br>
 <a href='#application-period'>Application period overview</a><br>
+<a href="#initial-application">Initial application</a><br>
 <a href="#application-prep">Preparing for the Application Process</a><br>
 <a href="#find-mentor">Finding a Mentor and an Internship Project</a><br>
 <a href="#make-contributions">Making Contributions</a><br>
@@ -102,6 +103,88 @@ Applicant Guide | Outreachy Documentation
 	<li>Applicants may be asked to verify their time commitment details</li>
 	<li>Intern selections are kept private until <a href='{% url 'alums' %}'>interns are announced</a> on {{ current_round.internannounce }}</li>
 </ul>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<h2 id='initial-application'><a href="#initial-application">Initial Application</a></h2>
+
+<p>The initial application includes several sections. Some sections determine whether you meet our <a href='#eligibility'>eligibility criteria</a>. We also ask you to provide some additional information and essays.</p>
+
+<p>You cannot save your initial application. You have to fill it out all at once. Make sure you're ready and have a stable internet connection. Don't submit your initial application at the last minute!</p>
+
+<p>You should have specific information on hand before you fill out the initial application:</p>
+<ul>
+	<li>If you are a university student: The academic calendar, both for this year and next year. If year's calendar is unavailable, use last year's calendar</li>
+	<li>If you are taking online courses: The calendar for the online course</li>
+	<li>If you are participating in a coding school: The calendar for your cohort's schedule</li>
+	<li>If you are (or will be) employed: The number of hours required by your employment contract and dates of employment</li>
+	<li>If you are a self-employed contractor: The average number of invoiced hours over the past six months</li>
+</ul>
+
+<p id='essay-questions'><b>Essay questions</b></p>
+
+<p>The initial application includes four essay questions:</li>
+
+<ol>
+	<li><b>Does your learning environment have few people who share your identity or background? Please provide details.</b> Contributing to free and open source software takes some skill. You may have already learned some basic skills through university or college classes, specialized schools, online classes, online resources, or with a mentor, friend, family member or co-worker. Does any of your learning environments have few people who share your identity or background? How did your identity or background differ from the majority of people in this learning environment? Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
+
+	<li><b>What systemic bias or discrimination have you faced while building your skills?</b> Outreachy projects often require applicants to know some basic skills. Those skills might include programming, user experience, documentation, illustration and graphical design, or data science. You may have already learned some basic skills through university or college classes, specialized schools, online classes, online resources, or with a mentor, friend, family member or co-worker. In these settings, have you faced systemic bias or discrimination? Have you been discouraged from accessing these resources because of your identity or background? Please provide specific examples and (optionally) statistics. Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
+
+	<li><b>What systemic bias or discrimination would you face if you applied for a job in the technology industry of your country?</b> Think about when you have applied for a job in the technology industry of your country. Do you think you have faced discrimination on the basis of your background or identity? If you have not applied for a job yet, do you think you may be discriminated against on the basis of your background or identity? Please provide specific examples and (optionally) statistics. Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
+
+	<li><b>What barriers or concerns have kept you from contributing to free and open source software?</b> Please provide specific examples. Outreachy organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
+
+</ol>
+
+<p id='essay-tips'><b>Essay Tips</b></p>
+
+<p>
+Two questions ask about the discrimination you face in your learning environment or while building your skills.
+We are <b>not</b> asking you to provide details about your completed classes, your educational background, or what skills you have.
+We are asking you to talk about about the <b>discrimination</b> you face in your learning environment or while building your skills.
+</p>
+
+<p>
+When talking about the discrimination you face, assume the reader lives in a different culture than you.
+Provide background about your culture, including links to articles or blogs if needed.
+</p>
+
+<p>
+If you mention that you face discrimination, say which marginalized group(s) you are a part of.
+You may need to mention the university, town, region, or country where you live or went to school.
+You may need to provide statistics about why your group is in the minority in that area.
+</p>
+
+<p>Unclear: "I face religious discrimination"<br>
+Clear: "I am a Muslim in France. Muslims make up less than 2.3% of France's population. I face religious discrimination."
+</p>
+
+<p>
+Provide specific examples of the discrimination you have faced.
+Provide a short summary of what happened.
+Talk about how the discrimination you faced impacts your education or career.
+Discrimination could be impacting you today or you may worry it will impact you in the future.
+</p>
+
+<p>
+We do not want writing an essay to re-traumatize survivors of violence and oppression.
+There is no need to share detailed descriptions of sexual harassment or assault.
+You do not need to share the details of why you are a refugee.
+If you face racism, you don't need to repeat the exact discriminatory comments you have heard.
+Instead, state that you face this type of discrimination, specify who is discriminating against you, and how it impacts your education or career.
+</p>
+
+<p>
+One essay question refers to "the technology industry of your country".
+We want to know about the technology industry in the country you will be living in during the internship.
+Talk about the discrimination you face in that country's technology industry, not in the international technology industry.
+</p>
+
+<p>
+Please do not put personal contact information in your essays.
+We do not require references and will not follow up with references.
+Please do not put links to your resume in your essays.
+We do not read resumes.
+</p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
 <h2 id='application-prep'><a href="#application-prep">Preparing for the Application Process</a></h2>
