Fix spelling error

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -306,7 +306,7 @@ you can decide whether the project is right for you by:
 To 'contribute' means 'To give to a common cause, often along with other people'.
 In free software and open source, we talk about 'contributing' to a project or community.
 That means people working together to improve an open source project.
-People who regularly work on open source are often called 'open source contibutors'.
+People who regularly work on open source are often called 'open source contributors'.
 </p>
 
 <p>
