Change guide section from 'Application Period' to 'Contribution period'

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -18,7 +18,7 @@ Applicant Guide | Outreachy Documentation
 <a href='#outreachy-schedule'>Outreachy schedule</a><br>
 <a href='#application-period'>Application period overview</a><br>
 <a href="#initial-application">Initial application</a><br>
-<a href="#application-prep">Preparing for the Application Process</a><br>
+<a href="#application-prep">Preparing for the contribution period</a><br>
 <a href="#find-mentor">Finding a Mentor and an Internship Project</a><br>
 <a href="#make-contributions">Making Contributions</a><br>
 </p>
@@ -187,7 +187,7 @@ We do not read resumes.
 </p>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
-<h2 id='application-prep'><a href="#application-prep">Preparing for the Application Process</a></h2>
+<h2 id='application-prep'><a href="#application-prep">Preparing for the contribution period</a></h2>
 
 <p>You can read about what it's like to apply to Outreachy:
 <ul>
