--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -51,7 +51,7 @@ Outreachy Internships | Apply | Pick a Project
 <p><a href='{% url 'docs-applicant' %}#payments'>Applicant guide</a> and <a href='{% url 'docs-internship' %}'>Internship guide</a>. Recommended sections to read:</p>
 <ul>
 	<li><a href='{% url 'docs-internship' %}#payments'>Intern payment schedule</a><br></li>
-	<li><a href='{% url 'docs-applicant' %}#application-prep'>Preparing for the Application Process</a></li>
+	<li><a href='{% url 'docs-applicant' %}#application-prep'>Preparing for the contribution period</a></li>
 	<li><a href="{% url 'docs-applicant' %}#find-mentor">Finding a Mentor and an Internship Project</a></li>
 	<li><a href="{% url 'docs-applicant' %}#make-contributions">Making Contributions</a></li>
 </ul>
