--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -21,6 +21,8 @@ Applicant Guide | Outreachy Documentation
 <a href="#application-prep">Preparing for the contribution period</a><br>
 <a href="#find-mentor">Finding a Mentor and an Internship Project</a><br>
 <a href="#make-contributions">Making Contributions</a><br>
+<a href='#final-application'>Final application</a><br>
+<a href='#intern-announcement'>Intern announcement</a><br>
 </p>
 
 <hr>
@@ -448,5 +450,34 @@ They communicate regularly with their mentor to discuss what they're working on.
 <p>
 Applicants are encouraged, but not required, to contribute after the contribution period ends.
 </p>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<h2 id='final-application'><a href='#final-application'>Final application</a></h2>
+
+<p>Applicants are required to create a final application for each Outreachy project they apply to.
+Only applicants that <a href='#record-contributions'>record a contribution</a> to a project will be able to create a final application for that project.
+</p>
+
+<p>
+We encourage applicants to submit their final application at least a day before the deadline ({{ current_round.contributions_close }} at 4pm UTC).
+You can edit your final application until the deadline.
+</p>
+
+<p>The final application asks four questions:</p>
+
+<ul>
+	<li><b>Past experience with this community.</b> Please describe your experience before this Outreachy application period with this free software community. You can describe your prior experiences as both a user and a contributor.</li>
+	<li><b>Past experience with other communities.</b> Please describe your experience before this Outreachy application period with any other free software communities. You can describe your prior experiences as both a user and a contributor.</li>
+	<li><b>Relevant Projects</b> Please describe any relevant projects (either personal, work, or school projects) that helped you gain skills you will use in this project. Talk about what knowledge you gained from working on them. Include links where possible.</li>
+	<li><b>(Optional) Please describe which Google Summer of Code communities and projects you are applying for, and provide mentor contact information.</b> If you are a student at an accredited university or college, we highly encourage you to also apply to <a href="https://summerofcode.withgoogle.com/">Google Summer of Code</a> during the May to August internship round. Many Outreachy communities participate in both programs, and applying to Google Summer of Code increases your chances of being accepted as an intern. Please note that <a href="https://developers.google.com/open-source/gsoc/help/student-stipends">Google Summer of Code has stipend amounts that vary per country</a>. Please keep the list of communities and projects you are applying to under Google Summer of Code up-to-date, since we often try to coordinate with Google Summer of Code mentors during the intern selection period. If this application is for the December to March internship period, or you are not applying to Google Summer of Code, please leave this question blank.</li>
+	<li><b>Outreachy internship project timeline.</b> Please work with your mentor to provide a timeline of the work you plan to accomplish on the project and what tasks you will finish at each step. Make sure take into account any time commitments you have during the Outreachy internship round. If you are still working on your contributions and need more time, you can leave this blank and edit your application later.</li>
+</ul>
+
+<p><a href='#toc'><u>↑ table of contents</u></a></p>
+<h2 id='intern-announcement'><a href='#intern-announcement'>Intern announcement</a></h2>
+
+<p>Intern selections are not shared with applicants until <a href='{% url 'alums' %}'>interns are announced</a> on {{ current_round.internannounce }} at 4pm UTC.</p>
+
+<p>If you want more details about the internship, please read our <a href='{% url 'docs-internship' %}'>Internship guide</a>.
 
 {% endblock %}
