Mix fixes and wordsmithing

--- a/home/templates/home/docs/applicant_guide.html
+++ b/home/templates/home/docs/applicant_guide.html
@@ -103,7 +103,7 @@ Applicant Guide | Outreachy Documentation
 	<li>{{ current_round.contributions_close }} to {{ current_round.internannounce }}</li>
 	<li>Mentors tell Outreachy organizers which interns they want to select</li>
 	<li>Applicants may be asked to verify their time commitment details</li>
-	<li>Intern selections are kept private until <a href='{% url 'alums' %}'>interns are announced</a> on {{ current_round.internannounce }}</li>
+	<li>Intern selections are not shared with applicants until <a href='{% url 'alums' %}'>interns are announced</a> on {{ current_round.internannounce }}</li>
 </ul>
 
 <p><a href='#toc'><u>↑ table of contents</u></a></p>
@@ -193,7 +193,6 @@ We do not read resumes.
 
 <p>You can read about what it's like to apply to Outreachy:
 <ul>
-	<li><a href="/apply/#how-to-apply">Outreachy's application process</a></li>
 	<li><a href="/blog/outreachy-interns-talk-about-application-process/">December 2018 Outreachy interns talk about the application process</a></li>
 	<li><a href="/alums/">Read past Outreachy intern's blogs</a></li>
 	<li><a href="https://medium.freecodecamp.org/get-the-most-out-of-your-outreachy-application-process-937d4a8ab4bf">Get the most out of your Outreachy intern application process</a></li>
@@ -235,35 +234,44 @@ The next step
 in the Outreachy application process is to look through the list of
 participating communities and internship projects. Pick one
 or two projects that look interesting to you.  Then you'll
-start working on a contribution for the project.
+work with a mentor to start working on a <a href='#make-contributions'>contribution</a> for the project.
 </p>
+
 <p>
-Only applicants that make a contribution to a project
-will be accepted as an intern, so it's good to not pick too
-many projects to apply to.
 We don't recommend applying to more than two projects.
 </p>
+
 <p>
-Many people apply to communities that are accepting multiple
-interns in order to increase their chances of getting accepted.
+Many people want to increase their chances of getting accepted.
+They see some communities that are accepting many interns,
+and some communities that are accepting one or two interns.
+Their instinct is to apply to the communities that are accepting more interns.
 However, when all the applicants think that way, it means
 projects that are only accepting one intern don't get a lot of
-applicants. You should pick a project that looks interesting to
-you, and will help you improve the skills you want to learn.
+applicants.
 </p>
+
+<p>
+You should pick a project that looks interesting to you,
+and will help you improve the skills you want to learn.
+Don't pick a project based on the number of interns the community is accepting.
+</p>
+
 <p>
 Many people get overwhelmed with the list of projects and don't
 know how to choose a project! Our advice is to pick a project
 whose mission resonates with you.
 </p>
+
 <p>
 Once you've narrowed down you list of projects,
 you can decide whether the project is right for you by:
 </p>
 <ul>
 	<li>
-	Introduce yourself to the project's mentor and discuss
-	the internship tasks or contribution tasks listed in the project details.
+	Introducing yourself to the project's mentor.
+	Ask questions about the project or anything you're confused about.
+	Discuss the internship tasks or contribution tasks listed in the project details.
 	Outreachy mentors are friendly and welcome your questions!
 	</li>
 	<li>
